<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_bg"
    tools:context=".SignUp">
    <TextView
        android:id="@+id/stress_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/stress_test"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="74dp"
        android:text="@string/stress_test"
        android:gravity="top"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stress_test"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="70dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_bg"
            android:layout_below="@+id/stress_test"
            android:paddingBottom="20dp">
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentTop="true"
                android:layout_marginVertical="12dp"
                android:text="@string/sign_up"
                style="@style/login"
                android:gravity="top"
                />

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@color/transparent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:background="@drawable/shape_email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_email"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/etConfirmPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_email"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/signIn_button_text"
                style="@style/button_style"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/button" />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:id="@+id/progress"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>