<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/app_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/initial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="43dp"
                    app:cardCornerRadius="10dp"

                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_bg"
                        android:padding="38dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/feeling_str"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            style="@style/text_heading_style"
                            android:text="@string/feeling_str"
                            android:gravity="top"
                            />
                        <TextView
                            android:id="@+id/try_our_fre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="25dp"
                            android:textSize="18sp"
                            android:text="@string/try_our_fre"
                            style="@style/text_style"
                            android:gravity="top"
                            />
                        <Button
                            android:id="@+id/test"
                            android:layout_width="200dp"
                            android:layout_height="60dp"
                            android:layout_marginTop="114dp"
                            android:layout_marginBottom="20dp"
                            style="@style/button_style"
                            android:layout_gravity="center"
                            android:text="Test My Stress"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/main"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/question"
                    android:layout_width="311dp"
                    android:layout_height="142dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="116dp"
                    style="@style/questions_displayed"
                    />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="288dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    style="@style/button_style"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="288dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    style="@style/button_style"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/button3"
                    android:layout_width="288dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    style="@style/button_style"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/button4"
                    android:layout_width="288dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    style="@style/button_style"
                    android:textStyle="bold"
                    />
                <Button
                    android:id="@+id/button5"
                    android:layout_width="288dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    style="@style/button_style"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/questionCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="10"
                    style="@style/text_style"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="29dp"
                        android:textSize="20sp"
                        android:layout_alignParentLeft="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="90dp"
                        android:text="@string/your_stress"
                        android:textAppearance="@style/text_style"
                        android:gravity="top"
                        />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:indeterminate="false"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvMsg"
                        android:progressDrawable="@drawable/circular_progress_bar"
                        android:background="@drawable/circle_shape"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:max="100" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="@id/progressBar"
                        app:layout_constraintEnd_toEndOf="@id/progressBar"
                        app:layout_constraintTop_toTopOf="@id/progressBar"
                        app:layout_constraintBottom_toBottomOf="@id/progressBar"
                        android:id="@+id/percent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_bg"
                        android:paddingVertical="40dp"
                        android:paddingHorizontal="20dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/remedy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            style="@style/text_style"
                            android:gravity="top"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/progressBar"
                            android:text="Watch Video"
                            android:visibility="gone"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginVertical="12dp"
                            android:layout_gravity="center"
                            style="@style/button_style"
                            android:textAllCaps="false"
                            android:id="@+id/watchVideo"/>
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/progressBar"
                            android:text="Call Now"
                            android:visibility="gone"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginVertical="48dp"
                            android:layout_gravity="center"
                            style="@style/button_style"
                            android:textAllCaps="false"
                            android:id="@+id/CallNow"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/button_style"
                    android:text="Share"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:id="@+id/share"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView></LinearLayout>